force-app/main/default/objects/APT_Customer_Response__c/APT_Customer_Response__c.object-meta.xml
<CustomObject>
    <label>Customer Response</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>