force-app/main/default/objects/APT_Customer_Response__c/fields/APT_How_important_customers_define_value__c.field-meta.xml
<CustomField>
    <fullName>APT_How_important_customers_define_value__c</fullName>
    <label>How important customers define value?</label>
    <type>TextArea</type>
</CustomField>