force-app/main/default/objects/APT_Customer_Response__c/fields/APT_How_to_gain_advantage_on_competitors__c.field-meta.xml
<CustomField>
    <fullName>APT_How_to_gain_advantage_on_competitors__c</fullName>
    <label>How to gain advantage on competitors?</label>
    <type>TextArea</type>
</CustomField>