force-app/main/default/objects/APT_Customer_Response__c/fields/Can_you_help_me_get_your_fulfilment__c.field-meta.xml
<CustomField>
    <fullName>Can_you_help_me_get_your_fulfilment__c</fullName>
    <label>Can you help me get your fulfilment?</label>
    <type>TextArea</type>
</CustomField>