force-app/main/default/objects/APT_Customer_Response__c/fields/How_to_gain_advantage_on_competitors_SMB__c.field-meta.xml
<CustomField>
    <fullName>How_to_gain_advantage_on_competitors_SMB__c</fullName>
    <label>How to gain advantage on competitors?</label>
    <type>TextArea</type>
</CustomField>